# Crypto-Tip-Jar

./: .gitignore  README.md  implementation.md  package-lock.json
contract/: Cargo.toml
contract/src/: lib.rs
frontend/: deploy.cjs  deploy.mjs  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: TipFeed.jsx  TipForm.jsx  WalletConnect.jsx
frontend/src/utils/: contract.js
